Updated code for production

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,50 +1,36 @@
-# Application Details
+
 spring.application.name=maze-project
-spring.profiles.active=prod          # Use a production profile for safety and isolation
+spring.profiles.active=prod         
 
-# Server Configuration
-server.port=8080                     # Port for the server
-server.error.include-message=never   # Avoid exposing error messages in responses
+server.port=8080                    
+server.error.include-message=never   
 
-# Logging
-logging.level.root=INFO              # Log only important messages
-logging.file.name=logs/maze-project.log  # Log file location
 
-# Security (Optional - Use SSL if required)
-server.ssl.enabled=false             # Disable SSL for simplicity here
-#server.ssl.key-store=classpath:keystore.p12
-#server.ssl.key-store-password=password
-#server.ssl.key-store-type=PKCS12
-#server.ssl.key-alias=tomcat
+logging.level.root=INFO             
+logging.file.name=logs/maze-project.log  
 
-# HTTP Encoding
+
+server.ssl.enabled=false            
+
+
 spring.http.encoding.enabled=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.force=true
 
-# Management and Monitoring
-management.endpoints.web.exposure.include=health,info # Allow only specific endpoints
-management.endpoint.health.show-details=never         # Restrict health details
-management.endpoints.web.base-path=/management        # Custom management URL
 
-# Caching (Optional)
-spring.cache.type=simple                              # Use simple caching for performance
+management.endpoints.web.exposure.include=health,info 
+management.endpoint.health.show-details=never         
+management.endpoints.web.base-path=/management        
 
-# Database Configuration (if added in future)
-# spring.datasource.url=jdbc:mysql://localhost:3306/maze_project
-# spring.datasource.username=your-username
-# spring.datasource.password=your-password
-# spring.jpa.hibernate.ddl-auto=update                # Update schema automatically
-# spring.jpa.show-sql=false                           # Hide SQL logs
+spring.cache.type=simple                             
 
-# Session Management
-server.servlet.session.timeout=30m                   # Set session timeout to 30 minutes
-server.servlet.session.cookie.secure=true            # Secure cookies (requires SSL)
-server.servlet.session.cookie.http-only=true         # Prevent JavaScript from accessing cookies
+                
+server.servlet.session.cookie.secure=true            
+server.servlet.session.cookie.http-only=true         
 
-# File Upload Limits (Optional)
+
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Application Messages
-spring.messages.basename=messages                    # Externalize messages for localization
+
+spring.messages.basename=messages                 
