--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 
 spring.application.name=maze-project
 spring.profiles.active=prod         
+spring.main.lazy-initialization=true
+
+JAVA_TOOL_OPTIONS="-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
 
 server.port=8080                    
 server.error.include-message=never   
@@ -17,6 +20,10 @@ spring.http.encoding.enabled=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.force=true
 
+
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/css,application/javascript
+server.compression.min-response-size=1024
 
 management.endpoints.web.exposure.include=health,info 
 management.endpoint.health.show-details=never         
